# QtWebSocketsMod

./: README.md  sync.profile
examples/websockets/doc/: echoclient.qdoc  echoserver.qdoc  examples.qdoc  qmlwebsocketclient.qdoc  simplechat.qdoc  sslechoclient.qdoc  sslechoserver.qdoc
examples/websockets/echoclient/: echoclient.cpp  echoclient.h  main.cpp
examples/websockets/echoserver/: echoserver.cpp  echoserver.h  main.cpp
examples/websockets/qmlwebsocketclient/: main.cpp
examples/websockets/simplechat/: chatserver.cpp  chatserver.h  main.cpp
examples/websockets/sslechoclient/: main.cpp  sslechoclient.cpp  sslechoclient.h
examples/websockets/sslechoserver/: main.cpp  sslechoserver.cpp  sslechoserver.h
packaging/: CMakeLists.txt  build_package.sh
src/imports/qmlwebsockets/: qmldir  (+8 more)
src/websockets/: qdefaultmaskgenerator_p.cpp  qdefaultmaskgenerator_p.h  qmaskgenerator.cpp  qmaskgenerator.h  qsslserver.cpp  qsslserver_p.h  qwebsocket.cpp  qwebsocket.h  qwebsocket_p.cpp  qwebsocket_p.h  qwebsocket_wasm_p.cpp  qwebsocketcorsauthenticator.cpp  qwebsocketcorsauthenticator.h  qwebsocketcorsauthenticator_p.h  qwebsocketdataprocessor.cpp  qwebsocketdataprocessor_p.h  qwebsocketframe.cpp  qwebsocketframe_p.h  qwebsockethandshakerequest.cpp  qwebsockethandshakerequest_p.h  qwebsockethandshakeresponse.cpp  qwebsockethandshakeresponse_p.h  qwebsocketprotocol.cpp  qwebsocketprotocol.h  qwebsocketprotocol_p.h  qwebsockets_global.h  qwebsocketserver.cpp  qwebsocketserver.h  qwebsocketserver_p.cpp  qwebsocketserver_p.h  websockets.pro
tests/global/: global.cfg
(+16 files in other folders)
